force-app/main/default/objects/custom_create314__c/custom_create314__c.object-meta.xml
<CustomObject>
    <label>Custom created object314</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects314</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>