force-app/main/default/objects/custom_create314__c/fields/custom_create_314field511__c.field-meta.xml
<CustomField>
    <fullName>custom_create_314field511__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 314field511</label>
    <type>Checkbox</type>
</CustomField>